[package]
name = "beginner-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.2"
actix-web = "4.4.1"
chrono = "0.4.33"
dotenv = "0.15.0"
env_logger = "0.11.1"
hyper = "1.1.0"
hyper-tls = "0.6.0"
serde = "1.0.196"
serde_json = "1.0.113"
sqlx = "0.7.3"
uuid = "1.7.0"
